--- a/SUS(PLANE)ABILITY/index.html
+++ b/SUS(PLANE)ABILITY/index.html
@@ -23,9 +23,9 @@
             )ABILITY
         </h1>
     </header>
-    <main>
+    <main class="flex-wrap">
         <div id="map">
-            <img src="img/eumap.jpg" alt="eu map">
+           <!-- <img src="img/eumap.jpg" alt="eu map"> -->
         </div>
         <div class="boxes">
             <section class="box">
@@ -65,8 +65,8 @@
                     </tr>
                     <tr>
                         <td><span id="timer">10:00</span></td>
-                        <td><span id="countries">5</span>/50</td>
-                        <td>Co2 status <span id="consumed">10000</span>/10000 Co2</td>
+                        <td>Countries: <span id="countries">5</span>/50</td>
+                        <td>Co2 status <span id="consumed">10000</span>/10000 CO2</td>
                         <td>Dice: <span id="dice">3</span></td>
                     </tr>
                 </table>
@@ -78,11 +78,11 @@
     </footer>
 </div>
 
-<div id="player-modal">
+<!--<div id="player-modal">
     <form id="player-form">
         <input type="text" placeholder="Player name" required>
         <input type="submit" value="Start game">
-    </form>
+    </form>-->
 </div>
 </body>
 
