--- a/SUS(PLANE)ABILITY/index.html
+++ b/SUS(PLANE)ABILITY/index.html
@@ -49,7 +49,7 @@
                     <td>
                         <img id="weather-icon" src="https://openweathermap.org/img/wn/10d@2x.png" alt="current weather">
                     </td>
-                    <td class="temperature"><span>10°C</span></td>
+                    <td><span id="temperature">10°C</span></td>
                 </table>
 
             </section>
