--- a/SUS(PLANE)ABILITY/index.html
+++ b/SUS(PLANE)ABILITY/index.html
@@ -54,7 +54,7 @@
 
             </section>
         </div>
-        <div class="status">
+        <div class="game-stats">
             <section class="stats">
                 <header>
                     <h2>Game status</h2>
@@ -65,8 +65,8 @@
                     </tr>
                     <tr>
                         <td><span id="timer">10:00</span></td>
-                        <td>Countries: <span id="countries">5</span>/50</td>
-                        <td>Co2 status <span id="consumed">10000</span>/10000 CO2</td>
+                        <td>Countries: <span id="countries">9999</span>/50</td>
+                        <td>Co2 status <span id="consumed">9999</span>/10000kg</td>
                         <td>Dice: <span id="dice">3</span></td>
                     </tr>
                 </table>
