dice and countries api work

--- a/testt/index.html
+++ b/testt/index.html
@@ -37,10 +37,11 @@
                         <td>Current country: <span id="current-country">Spain</span></td>
                     </tr>
                     <tr>
+                        <td>Capital: <span id="capital">Madrid</span></td>
                         <td>Population: <span id="population">1503020</span></td>
                         <td>Language: <span id="language">Spanish</span></td>
                         <td>Currency: <span id="currency">€</span></td>
-                        <td>Flag: <span id="flag">asdf</span></td>
+                        <td>Flag:<img id="flag" src=""  alt="flag picture"></td>
                     </tr>
                 </table>
             </section>
