--- a/testt/index.html
+++ b/testt/index.html
@@ -7,94 +7,125 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.8.0/dist/leaflet.css"/>
     <link href="css/style.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://unpkg.com/leaflet@1.8.0/dist/leaflet.js" defer></script>
     <script type="module" src="https://cdn.jsdelivr.net/npm/ionicons/dist/ionicons/ionicons.esm.js" defer></script>
     <script nomodule src="https://cdn.jsdelivr.net/npm/ionicons/dist/ionicons/ionicons.js" defer></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia&effect=fire">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="js/main.js" defer></script>
     <title>SUS(plane)ABILITY</title>
 </head>
 
 <body>
-<div class="container">
+<div class="top-nav">
     <header class="page-header">
-        <h1 class ="page-title">
+   <div id="mySidebar" class="sidebar">
+  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+  <a href="#">Rules</a>
+  <a href="#">About Us</a>
+  <a href="#">Contact</a>
+</div>
+
+
+  <button class="openbtn" onclick="openNav()">&#9776;</button>
+
+
+        <script>     function openNav() {
+  document.getElementById("mySidebar").style.width = "250px";
+  document.getElementById("main").style.marginRight = "250px";
+}
+
+function closeNav() {
+  document.getElementById("mySidebar").style.width = "0";
+  document.getElementById("main").style.marginRight = "0";
+
+}</script>
+
+        <h1 class="font-effect-fire">
             SUS(
-            <ion-icon name="airplane"></ion-icon>
+            <ion-icon  name="airplane"></ion-icon>
             )ABILITY
         </h1>
     </header>
+</div>
     <main class="flex-wrap">
         <div id="map">
            <!-- <img src="img/eumap.jpg" alt="eu map"> -->
-        </div>
-        <div class="boxes">
-            <section class="box">
+
+              <div class="box">
+                <div class="country-facts">
                 <header>
                     <h2>Country facts</h2>
                 </header>
-                <table>
+                <table class="fact-table">
                     <tr>
                         <td>Current country: <span id="current-country">Spain</span></td>
                     </tr>
                     <tr>
-                        <td>Capital: <span id="capital">Madrid</span></td>
                         <td>Population: <span id="population">1503020</span></td>
-                        <td>Language: <span id="language">Spanish</span></td>
-                        <td>Currency: <span id="currency">€</span></td>
-                        <td>Flag:<img id="flag" src=""  alt="flag picture"></td>
-                    </tr>
+                         </tr>
+                        <tr><td>Language: <span id="language">Spanish</span></td></tr>
+                        <tr><td>Currency: <span id="currency">€</span></td></tr>
+                        <tr><td>Flag: <span id="flag"><ion-icon name="flag-outline"></ion-icon></span></td></tr>
+
                 </table>
-            </section>
-            <section class="box">
-                <table id="weather">
+                    </div>
+                </div>
+            <div class="box">
+                <div class="weather">
+                    <table>
                     <tr>
-                        <td>Temperature</td>
+                        <td><h6>Temperature</h6></td>
                         <td>
                             <img id="weather-icon" src="https://openweathermap.org/img/wn/10d@2x.png"  alt="Current weather">
                         </td>
-                        <td>Wind</td>
+                        <td><h6>Wind</h6></td>
                     </tr>
                     <tr>
                         <td id="airport-temp">10°C</td>
                         <td id="airport-conditions">Cloudy</td>
-                        <td id="airport-wind">40m/s</td> 
+                        <td id="airport-wind">40m/s</td>
                     </tr>
-                </table>
+                        </table>
+                </div>
 
-            </section>
-        </div>
-        <div class="game-stats">
-            <section class="stats">
-                <header>
-                    <h2>Game status</h2>
+            </div>
+
+
+            <div class="box">
+                <div class="game-stats">
+                <header class="header">
+                    <h2>Game status:</h2>
                 </header>
                 <table>
                     <tr>
                         <td colspan="2">
-                            <h3 id="player-name">Player Name</h3>
-                        </td>
+                            <h5 id="player-name">Player name</h5></td>
                     </tr>
                     <tr>
-                        <td><span id="timer">10:00</span></td>
-                        
-                        <td>Countries: <span id="countries">0</span>/50</td>
-                        <td>Co2 status <span id="consumed">0</span>/10000kg</td>
-                        <td>Dice: <span id="dice">3</span></td>
-                    </tr>
-                </table>
-            </section>
-        </div>
-    </main>
-    <footer class="page-footer">
-        <p>SUS(PLANE)ABILITY Made by Group 2.</p>
-    </footer>
-</div>
+                        <td><span id="timer">10:00</span></td></tr>
+                        <tr><td>Countries: <span id="countries">7</span>/50</td></tr>
+                        <tr><td>Co2 status <span id="consumed">9999</span>/10000kg</td></tr>
+                        <tr><td>Dice: <span id="dice">3</span></td>
 
+                </table>
+                 </div>
+            </div>
+          </div>
+    </main>
 <div id="player-modal">
     <form id="player-form">
         <input id="player-input" type="text" placeholder="Player name" required>
         <input type="submit" value="Start game">
     </form>
+    <footer class="page-footer">
+        <p>SUS(PLANE)ABILITY Made by Group 2.</p>
+    </footer>
+</div>
+
+
 </div>
 </body>
 
