--- a/testt/index.html
+++ b/testt/index.html
@@ -100,7 +100,7 @@ function closeNav() {
                         <td><span id="timer">10:00</span></td>
                         
                         <td>Countries: <span id="countries">0</span>/50</td>
-                        <td>Co2 status <span id="consumed">0</span>/10000kg</td>
+                        <td>CO2 status <span id="consumed">0</span>/10000kg</td>
                         <td>Dice: <span id="dice">3</span></td>
 
                 </table>
