--- a/testt/index.html
+++ b/testt/index.html
@@ -12,8 +12,11 @@
     <script src="https://unpkg.com/leaflet@1.8.0/dist/leaflet.js" defer></script>
     <script type="module" src="https://cdn.jsdelivr.net/npm/ionicons/dist/ionicons/ionicons.esm.js" defer></script>
     <script nomodule src="https://cdn.jsdelivr.net/npm/ionicons/dist/ionicons/ionicons.js" defer></script>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia&effect=fire">
+    <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia&effect=fire"> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Zen+Dots&display=swap" rel="stylesheet">
     <script src="js/main.js" defer></script>
     <title>SUS(plane)ABILITY</title>
 </head>
@@ -101,6 +104,7 @@ function closeNav() {
                         
                         <td>Countries: <span id="countries">0</span>/50</td>
                         <td>CO2 status <span id="consumed">0</span>/10000kg</td>
+                        <td>Purification: <span id = "purification">0%</span>
                         <td>Dice: <span id="dice">3</span></td>
 
                 </table>
