--- a/testt/index.html
+++ b/testt/index.html
@@ -96,14 +96,14 @@ function closeNav() {
                 <table>
                     <tr>
                         <td colspan="2">
-                            <h3 id="player-name">Player Name</h3>
+                            <h3 id="player-name">Player:</h3>
                         </td>
                     </tr>
                     <tr>
                         <td><span id="timer">10:00</span></td>
                         
                         <td>Countries: <span id="countries">0</span>/50</td>
-                        <td>CO2 status <span id="consumed">0</span>/10000kg</td>
+                        <td>CO2 status: <span id="consumed">0</span>/10000kg</td>
                         <td>Purification: <span id = "purification">0%</span>
                         <td>Dice: <span id="dice">3</span></td>
 
