--- a/testt/index.html
+++ b/testt/index.html
@@ -53,6 +53,13 @@ function closeNav() {
         </h1>
     </header>
 </div>
+<div id="player-modal">
+    <form id="player-form">
+        <input id="player-input" type="text" placeholder="Player name" required>
+        <input type="submit" value="Start game">
+    </form>
+
+</div>
 
 
     <main class="flex-wrap">
@@ -121,12 +128,12 @@ function closeNav() {
     </footer>
 </div>
 
-<div id="player-modal">
+<!-- <div id="player-modal">
     <form id="player-form">
         <input id="player-input" type="text" placeholder="Player name" required>
         <input type="submit" value="Start game">
     </form>
-</div>
+</div> -->
 </body>
 
 </html>
