--- a/test2/rules.html
+++ b/test2/rules.html
@@ -38,5 +38,12 @@
         document.getElementById("mySidebar").style.width = "0";
         document.getElementById("main").style.marginLeft = "0";
     }</script>
+        <h1 class="font-effect-fire">
+            SUS(
+            <ion-icon  name="airplane"></ion-icon>
+            )ABILITY
+        </h1>
+    </header>
+</div>
 </body>
 </html>
