--- a/test2/index.html
+++ b/test2/index.html
@@ -28,7 +28,7 @@
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
   <a href="index.html">Game</a>
   <a href="story.html">Story</a>
-  <a href="#">Rules</a>
+  <a href="rules.html">Rules</a>
 </div>
 
 
