--- a/testt/index.html
+++ b/testt/index.html
@@ -26,9 +26,9 @@
     <header class="page-header">
    <div id="mySidebar" class="sidebar">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-  <a href="#">Rules</a>
-  <a href="#">About Us</a>
-  <a href="#">Contact</a>
+  <a href="index.html">Game</a>
+  <a href="story.html">Story</a>
+  <a href="rules.html">Rules</a>
 </div>
 
 
