--- a/testt/rules.html
+++ b/testt/rules.html
@@ -51,11 +51,11 @@
     <h2>Rules</h2>
 
     <ol>
-    <li>Fly to all the eu countries and purify them. For every 10 collected countries the corruption will be decreased by 24%</li>
-    <li>You have 3 min. If the time rans out the world will be destroyed. game over</li>
-    <li>If you exceed the CO2 budget you will pollute the world even more. game over</li>
-    <li>Every time you fly the dice of fate will be rolled:</li>
-    <li>(Same thing as before except you die if you get 1)</li>
+    <li>Fly to all the EU countries and purify them. For every 10 collected countries the corruption will be decreased by 24%</li>
+    <li>You have 3 min. If the time rans out the world will be destroyed. Game over</li>
+    <li>If you exceed the CO2 budget you will pollute the world even more. Game over</li>
+    <li>Every time you fly the dice of fate will be rolled. (Same thing as before except you die if you get 1)</li>
+
     </ol>
 
 </div>
