story option button

--- a/testt/story.html
+++ b/testt/story.html
@@ -45,6 +45,11 @@ function closeNav() {
             <ion-icon  name="airplane"></ion-icon>
             )ABILITY
         </h1>
+        <button class="easymode" onclick="location.href='story2.html'" type="button">
+            READ</button>
+        <script>
+            
+        </script>
     </header>
 </div>
     <section class ="story">
