--- a/testt/rules.html
+++ b/testt/rules.html
@@ -59,9 +59,10 @@
     </ol>
 
 </div>
+<img id="gif" src="img/sus.gif" alt="Example purification">
 <footer class="page-footer">
         <p> &copy; SUS(PLANE)ABILITY </p>
-    </footer>
+</footer>
 </body>
 
 </html>
