--- a/testt/story2.html
+++ b/testt/story2.html
@@ -47,7 +47,7 @@
         </h1>
     </header>
 </div>
-<div id="rules">
+<div id="textstory">
     <h2>Story</h2>
     <p>To live in a space station, what an honour. Years ago you were selected among millions to be one of the few lucky individuals to take part in an experiment started by NASA. As one of the chosen few you had the opportunity to look down upon Earth in all of it's glory. Months later you notice that the Earth no longer looks as it once did. As it turns out this was the reason behind this whole experiment. 
 
