something not yet

--- a/testt/story.html
+++ b/testt/story.html
@@ -54,7 +54,7 @@ function closeNav() {
 </div>
     <section class ="story">
     <section class="intro">
-        Some galaxy far away...
+        <!-- Some galaxy far away... --> On Earth in a future not too far away...
     </section>
     <section class="logo">
         <img src="img/sus.png" alt="susplane" width="500px">
