--- a/testt/index.html
+++ b/testt/index.html
@@ -116,7 +116,7 @@ function closeNav() {
                 <div class ='death-window'>
                     <figure id="death">
                         <h3 id ='death-title'>GAME OVER!</h3>
-                        <p id ='death-text'>You went over the budget and destroyed the world..good job</p>
+                        <p id ='death-text'>"Times out! You didn't save the Earth in time."</p>
                         <button id="oks">OK</button>
                     </figure>
                 </div>
