--- a/game/rules.html
+++ b/game/rules.html
@@ -20,29 +20,29 @@
 <body>
 <div class="top-nav">
     <header class="page-header">
-   <div id="mySidebar" class="sidebar">
-  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-  <a href="index.html">Game</a>
-  <a href="story.html">Story</a>
-  <a href="rules.html">Rules</a>
-</div>
+        <div id="mySidebar" class="sidebar">
+            <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+            <a href="index.html">Game</a>
+            <a href="story.html">Story</a>
+            <a href="rules.html">Rules</a>
+        </div>
 
 
-  <button class="openbtn" onclick="openNav()">&#9776;</button>
+        <button class="openbtn" onclick="openNav()">&#9776;</button>
 
 
         <script>     function openNav() {
-  document.getElementById("mySidebar").style.width = "250px";
-  document.getElementById("main").style.marginLeft = "250px";
-}
+            document.getElementById("mySidebar").style.width = "250px";
+            document.getElementById("main").style.marginLeft = "250px";
+        }
 
-    function closeNav() {
-        document.getElementById("mySidebar").style.width = "0";
-        document.getElementById("main").style.marginLeft = "0";
-    }</script>
+        function closeNav() {
+            document.getElementById("mySidebar").style.width = "0";
+            document.getElementById("main").style.marginLeft = "0";
+        }</script>
         <h1 class="font-effect-fire">
             SUS(
-            <ion-icon  name="airplane"></ion-icon>
+            <ion-icon name="airplane"></ion-icon>
             )ABILITY
         </h1>
     </header>
@@ -51,17 +51,19 @@
     <h2>Rules</h2>
 
     <ol>
-    <li>Fly to all the EU countries and purify them. For every 10 collected countries the corruption will be decreased by 24%</li>
-    <li>You have 3 min. If the time rans out the world will be destroyed. Game over</li>
-    <li>If you exceed the CO2 budget you will pollute the world even more. Game over</li>
-    <li>Every time you fly the dice of fate will be rolled. (Same thing as before except you die if you get 1)</li>
+        <li>Fly to all the EU countries and purify them. For every 10 collected countries the corruption will be
+            decreased by 24%
+        </li>
+        <li>You have 3 min. If the time rans out the world will be destroyed. Game over</li>
+        <li>If you exceed the CO2 budget you will pollute the world even more. Game over</li>
+        <li>Every time you fly the dice of fate will be rolled. (Same thing as before except you die if you get 1)</li>
 
     </ol>
 
 </div>
 <img id="gif" src="img/sus.gif" alt="Example purification">
 <footer class="page-footer">
-        <p> &copy; SUS(PLANE)ABILITY </p>
+    <p> &copy; SUS(PLANE)ABILITY </p>
 </footer>
 </body>
 
