--- a/game/story2.html
+++ b/game/story2.html
@@ -20,48 +20,55 @@
 <body>
 <div class="top-nav">
     <header class="page-header">
-   <div id="mySidebar" class="sidebar">
-  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-  <a href="index.html">Game</a>
-  <a href="story.html">Story</a>
-  <a href="rules.html">Rules</a>
-</div>
+        <div id="mySidebar" class="sidebar">
+            <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+            <a href="index.html">Game</a>
+            <a href="story.html">Story</a>
+            <a href="rules.html">Rules</a>
+        </div>
 
 
-  <button class="openbtn" onclick="openNav()">&#9776;</button>
+        <button class="openbtn" onclick="openNav()">&#9776;</button>
 
 
         <script>     function openNav() {
-  document.getElementById("mySidebar").style.width = "250px";
-  document.getElementById("main").style.marginLeft = "250px";
-}
+            document.getElementById("mySidebar").style.width = "250px";
+            document.getElementById("main").style.marginLeft = "250px";
+        }
 
-    function closeNav() {
-        document.getElementById("mySidebar").style.width = "0";
-        document.getElementById("main").style.marginLeft = "0";
-    }</script>
+        function closeNav() {
+            document.getElementById("mySidebar").style.width = "0";
+            document.getElementById("main").style.marginLeft = "0";
+        }</script>
         <h1 class="font-effect-fire">
             SUS(
-            <ion-icon  name="airplane"></ion-icon>
+            <ion-icon name="airplane"></ion-icon>
             )ABILITY
         </h1>
     </header>
 </div>
 <div id="textstory">
     <h2>Story</h2>
-    <p>To live in a space station, what an honour. Years ago you were selected among millions to be one of the few lucky individuals to take part in an experiment started by NASA. As one of the chosen few you had the opportunity to look down upon Earth in all of it's glory. Months later you notice that the Earth no longer looks as it once did. As it turns out this was the reason behind this whole experiment. 
+    <p>To live in a space station, what an honour. Years ago you were selected among millions to be one of the few lucky
+        individuals to take part in an experiment started by NASA. As one of the chosen few you had the opportunity to
+        look down upon Earth in all of it's glory. Months later you notice that the Earth no longer looks as it once
+        did. As it turns out this was the reason behind this whole experiment.
 
-    Earth doesn't have much more time. The corrupt world you see before you is a product of the unsustainable lifestyle of humans. No one else on the space station shared your worries with the corruption taking over Earth. You knew you had to take action, even if you were alone. With your trusty space-made purification gun, and only a few minutes to spare you hijack an escape pod and make your way to Earth to purify the spreading corruption. Landing right outside of the airport, you come across an old airplane with limited co2 amount.
-    
-    Fly around to all the countries and purify Earth as you go. The fate of Earth is in your hands, however your fate is in hands of bored higher beings that like to throw dice. With enough luck you may be able to succeed.         
+        Earth doesn't have much more time. The corrupt world you see before you is a product of the unsustainable
+        lifestyle of humans. No one else on the space station shared your worries with the corruption taking over Earth.
+        You knew you had to take action, even if you were alone. With your trusty space-made purification gun, and only
+        a few minutes to spare you hijack an escape pod and make your way to Earth to purify the spreading corruption.
+        Landing right outside of the airport, you come across an old airplane with limited co2 amount.
+
+        Fly around to all the countries and purify Earth as you go. The fate of Earth is in your hands, however your
+        fate is in hands of bored higher beings that like to throw dice. With enough luck you may be able to succeed.
     </p>
 
- 
 
 </div>
 <footer class="page-footer">
-        <p> &copy; SUS(PLANE)ABILITY </p>
-    </footer>
+    <p> &copy; SUS(PLANE)ABILITY </p>
+</footer>
 </body>
 
 </html>
