--- a/game/rules.html
+++ b/game/rules.html
@@ -5,9 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="css/story.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+    <link href="css/rules.css" rel="stylesheet">
+   
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -48,20 +47,29 @@
     </header>
 </div>
 <div id="rules">
+    <figure>
     <h2>Rules</h2>
 
     <ol>
-        <li>Fly to all the EU countries and purify them. For every 10 collected countries the corruption will be
-            decreased by 24%
-        </li>
-        <li>You have 3 min. If the time rans out the world will be destroyed. Game over</li>
+        <li>Fly to all 50 EU countries to purify them. </li>
+        <li>For every 10 collected countries the corruption will be decreased by 20%.</li>
+        <li>You only have 3 minutes. If the time runs out, the Earth will be uncurable. Game over.</li>
         <li>If you exceed the CO2 budget you will pollute the world even more. Game over</li>
-        <li>Every time you fly the dice of fate will be rolled. (Same thing as before except you die if you get 1)</li>
+        <li>Every time you fly the dice of fate will be rolled.</li> 
+        <li>The outcomes of the rolls are as follows:</li>
+        <li>Dice 6: You get a full Co2 refund for that particular flight.</li>
+        <li>Dice 5: You get a 50% Co2 refund for that particular flight.</li>
+        <li>Dice 4: Your plane had to return to the previous airport. Full amount of Co2 wasted for that trip.</li>
+        <li>Dice 3: Your planes GPS breaks and you end up at a random destination anywhere in the world.</li>
+        <li>Dice 2: You had to take an unexpected detour. Double the amount of Co2 consumed.</li>
+        <li>Dice 1: Worst possible scenario. You have a 50% chance of dying.</li>
 
     </ol>
+    <img id="gif" src="img/sus.gif" alt="Example purification">
+    </figure>
 
 </div>
-<img id="gif" src="img/sus.gif" alt="Example purification">
+<!-- <img id="gif" src="img/sus.gif" alt="Example purification"> -->
 <footer class="page-footer">
     <p> &copy; SUS(PLANE)ABILITY </p>
 </footer>
