--- a/game/story2.html
+++ b/game/story2.html
@@ -5,15 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="css/story.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+    <link href="css/story2.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Zen+Dots&display=swap" rel="stylesheet">
-    <script type="module" src="https://cdn.jsdelivr.net/npm/ionicons/dist/ionicons/ionicons.esm.js" defer></script>
-    <script nomodule src="https://cdn.jsdelivr.net/npm/ionicons/dist/ionicons/ionicons.js" defer></script>
     <script src="js/main.js" defer></script>
     <title>SUS(plane)ABILITY</title>
 </head>
@@ -49,18 +45,21 @@
 </div>
 <div id="textstory">
     <h2>Story</h2>
-    <p>To live in a space station, what an honour. Years ago you were selected among millions to be one of the few lucky
+    <p>To live in a space station, what an honour...</p> 
+    <p>Years ago you were selected among millions to be one of the few lucky
         individuals to take part in an experiment started by NASA. As one of the chosen few you had the opportunity to
-        look down upon Earth in all of it's glory. Months later you notice that the Earth no longer looks as it once
-        did. As it turns out this was the reason behind this whole experiment.
+        look down upon Earth in all of it's glory. 
+        Months later you notice that the Earth no longer looks as it once
+        did. As it turns out this was the reason behind this whole experiment.</p>
+    
 
-        Earth doesn't have much more time. The corrupt world you see before you is a product of the unsustainable
+       <p>Earth doesn't have much more time. The corrupt world you see before you is a product of the unsustainable
         lifestyle of humans. No one else on the space station shared your worries with the corruption taking over Earth.
         You knew you had to take action, even if you were alone. With your trusty space-made purification gun, and only
         a few minutes to spare you hijack an escape pod and make your way to Earth to purify the spreading corruption.
-        Landing right outside of the airport, you come across an old airplane with limited co2 amount.
+        Landing right outside of the airport, you come across an old airplane with limited co2 amount.</p>
 
-        Fly around to all the countries and purify Earth as you go. The fate of Earth is in your hands, however your
+        <p>Fly around to all the countries and purify Earth as you go. The fate of Earth is in your hands, however your
         fate is in hands of bored higher beings that like to throw dice. With enough luck you may be able to succeed.
     </p>
 
