--- a/game/rules.html
+++ b/game/rules.html
@@ -57,12 +57,12 @@
         <li>If you exceed the CO2 budget you will pollute the world even more. Game over</li>
         <li>Every time you fly the dice of fate will be rolled.</li> 
         <li>The outcomes of the rolls are as follows:</li>
-        <li>Dice 6: You get a full Co2 refund for that particular flight.</li>
-        <li>Dice 5: You get a 50% Co2 refund for that particular flight.</li>
-        <li>Dice 4: Your plane had to return to the previous airport. Full amount of Co2 wasted for that trip.</li>
-        <li>Dice 3: Your planes GPS breaks and you end up at a random destination anywhere in the world.</li>
-        <li>Dice 2: You had to take an unexpected detour. Double the amount of Co2 consumed.</li>
-        <li>Dice 1: Worst possible scenario. You have a 50% chance of dying.</li>
+        <p>Dice 6: You get a full Co2 refund for that particular flight.<br>
+        Dice 5: You get a 50% Co2 refund for that particular flight.<br>
+        Dice 4: Your plane had to return to the previous airport. Full amount of Co2 wasted for that trip.<br>
+        Dice 3: Your planes GPS breaks and you end up at a random destination anywhere in the world.<br>
+        Dice 2: You had to take an unexpected detour. Double the amount of Co2 consumed.<br>
+       Dice 1: Worst possible scenario. You have a 50% chance of dying.</p>
 
     </ol>
     <img id="gif" src="img/sus.gif" alt="Example purification">
