--- a/game/story.html
+++ b/game/story.html
@@ -64,7 +64,7 @@
             <p id="subtitle">
                 <br>
                 To live in a space station, what an honour. Years ago you were selected among millions to be one of the
-                few lucky individuals to take part in an experiment started by NASA. As one of the chosen few you had
+                few lucky individuals to take part in an experiment started by the World Government. As one of the chosen few you had
                 the opportunity to look down upon Earth in all of it's glory. Months later you notice that the Earth no
                 longer looks as it once did. As it turns out this was the reason behind this whole experiment.
 
