--- a/game/story2.html
+++ b/game/story2.html
@@ -49,7 +49,7 @@
     <h2>Story</h2>
     <p>To live in a space station, what an honour...</p> 
     <p>Years ago you were selected among millions to be one of the few lucky
-        individuals to take part in an experiment started by NASA. As one of the chosen few you had the opportunity to
+        individuals to take part in an experiment started by the World Government. As one of the chosen few you had the opportunity to
         look down upon Earth in all of it's glory. 
         Months later you notice that the Earth no longer looks as it once
         did. As it turns out this was the reason behind this whole experiment.</p>
