--- a/game/rules.html
+++ b/game/rules.html
@@ -52,7 +52,7 @@
 
     <ol>
         <li>Fly to all 50 EU countries to purify them. </li>
-        <li>For every 10 collected countries the corruption will be decreased by 20%.</li>
+        <li>For every 10 collected countries the pollution will be decreased by 20%.</li>
         <li>You only have 3 minutes. If the time runs out, the Earth will be uncurable. Game over.</li>
         <li>If you exceed the CO2 budget you will pollute the world even more. Game over</li>
         <li>Every time you fly the dice of fate will be rolled.</li> 
