--- a/game/story.html
+++ b/game/story.html
@@ -68,11 +68,11 @@
                 the opportunity to look down upon Earth in all of it's glory. Months later you notice that the Earth no
                 longer looks as it once did. As it turns out this was the reason behind this whole experiment.
 
-                Earth doesn't have much more time. The corrupt world you see before you is a product of the
+                Earth doesn't have much more time. The polluted world you see before you is a product of the
                 unsustainable lifestyle of humans. No one else on the space station shared your worries with the
                 corruption taking over Earth. You knew you had to take action, even if you were alone. With your trusty
                 space-made purification gun, and only a few minutes to spare you hijack an escape pod and make your way
-                to Earth to purify the spreading corruption. Landing right outside of the airport, you come across an
+                to Earth to purify the spreading pollution. Landing right outside of the airport, you come across an
                 old airplane with limited co2 amount.
 
                 Fly around to all the countries and purify Earth as you go. The fate of Earth is in your hands, however
